<resources>
    <string name="app_name">UWConnect</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Math News</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="userName">Name</string>
    <string name="major">Major</string>
    <string name="degreeType">Degree Type</string>
    <string-array name="degree_types_array">
        <item>Choose one</item>
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>PhD</item>
    </string-array>
    <string-array name="rss_source_array">
        <item>Math News</item>
        <item>Math Student</item>
        <item>Eng News</item>
        <item>Sci News</item>
    </string-array>
    <string name="saveButton">Save</string>
    <string name="title_activity_home_fragment_c">HomeFragmentC</string>
    <string name="title_activity_home_fragment_compose">HomeFragmentCompose</string>
</resources>
