<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <!--user email text box-->
    <EditText
            android:id="@+id/EmailID"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

    <!--password text box-->
    <EditText
            android:id="@+id/PasswordID"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmailID"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

    <!--login button-->
    <Button
            android:id="@+id/LoginBtnID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PasswordID"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login" />

</RelativeLayout>
